# cclox

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
.cache/clangd/index/: main.cc.48C05AD551BC3705.idx
src/: chunk.cc  compiler.cc  debug.cc  main.cc  scanner.cc  vm.cc
src/include/: chunk.h  compiler.h  debug.h  parser.h  scanner.h  token.h  value.h  vm.h
